# github-trend-predictor

./: .gitignore  CHANGES_FOR_OSCAR.md  FEATURES.md  README.md  cleanup_feature_group.py  main.py  predictions.json  pyproject.toml
.github/workflows/: inference-daily.yml  repos-daily.yml  training-weekly.yml
data/: gh_archive_test.csv  trending_history.json  unlabeled_2025-12-20.csv  unlabeled_2025-12-26.csv  unlabeled_2025-12-27.csv
docs/: CLAUDE.md  PIPELINE_FLOW.md  WORKFLOWS.md
src/github_predictor/pipelines/: hopsworks_client.py
src/github_predictor/pipelines/feature_pipeline/: backfill_pipeline.py  daily_pipeline.py  feature_enricher.py  gh_archive_scraper.py  github_api_client.py  hn_scraper.py  hopsworks_client.py  trending_labeler.py  trending_scraper.py
src/github_predictor/pipelines/inference_pipeline/: predict.py
src/github_predictor/pipelines/training_pipeline/: training.py
src/github_predictor/utils/: config.py
